# indidus_password_manager

./: CMD.md  README.md  analysis_options.yaml  firebase.json  flutter_native_splash.yaml  justfile  pubspec.yaml  workflow.md
.github/workflows/: dart.yml  flutter.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
integration_test/: simple_test.dart
ios/: firebase_app_id_file.json
ios/ImageNotification/: GoogleService-Info.plist
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  index.dart  init_const.dart  main.dart  main_old.dart  responsive_app.dart
lib/auth/: local_auth_observer.dart
lib/backend/: backend.dart
lib/components/: link_button.dart
lib/flutter_flow/: custom_icons.dart  flutter_flow_icon_button.dart  flutter_flow_theme.dart  flutter_flow_util.dart  flutter_flow_widgets.dart
lib/providers/: note_provider.dart  note_provider.g.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: firebase_app_id_file.json
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: .env  Cargo.toml  password.db  sqlx.md
rust/.sqlx/: query-02296c6950451c28ad701ca8db3ff6b634d3cbd9b3ff7bf32f4fa8c75739c7f4.json  query-068b224f286b9c7e18e3aa5e64bcd5e00be36f75aa01274fdb593c5963fc4663.json  query-06d57bdff646e240e135fa5f58b527eaa9cfd5362509b10df6b3711870392c53.json  query-6624c7c6b16e80e35b52e65abbba746f2f33c55e42069d673534ef10b9c976dc.json  query-676247feda87556882ad3bf8fc5b0ca73f081b1c4955ae5e3f7f2f0c64e032a0.json  query-6907076dd8c377496ee077c1c39d08f5b954cd54083429c7ab993b8d4e91bc16.json  query-6d1b0ceda11c2220c2c57defb06488d0c5e1907ec8c50066fa5f460a9fdc6c4b.json  query-78de5398d17ebf6de3cbf7c92e0d126f79b2df0d08f46baf487701ccfdf652ca.json  query-8240b3a75901609bd986e78e0ad1bbead93d4056e472d5f398e581df9d216df1.json  query-8d3b8c85c609c66060b006004192f26e09e86192ac783a5b32678cdb2695097f.json  query-938655a2c5ce3197bec6adbb2c8a101678d4f2bf40c8e80d049c52a3a899ce06.json  query-9cb5edc1c885b618bd31324e4450126a0d113aa3f4af0acf7e42cd3f05e414ea.json  query-a5bc2b2be81f014a05b3ea7e0462e999dfcb6db9a6ed4bce1ca58cef388d71e2.json  query-aa7d98c4cf87fd24c81614990fa4e4ff9ef50672cb347b66ea2b6af3adc81318.json  query-abbf1293214a765f2ed162095821d841191a8e5781387b27db9ac1d38e133aff.json  query-bd876a96982c70c7e457808b01bd39a89add30b2bb86707d70f134b5cbafdf38.json  query-ca55261c8a93c9a58f1ba2211c419ad0dc6f9724e9befca1d63959891aa4ff0d.json  query-d6cd27dcc46905ba68119dbf6cc9c2c296000a3e302a5be2ec15f9aca1596873.json  query-e65f1fd9f93da415a305cfe7231de6e2fae0a1cab61f9cee2cb4c914d4a4f0a6.json  query-eda414637a0415ce8836709219293b2a73b326fc3e7f95423bdbf8de32a1d2d6.json
rust/crudlf_core/: Cargo.toml
rust/crudlf_core/src/: lib.rs  tests.rs
rust/crudlf_derive/: Cargo.toml
rust/crudlf_derive/src/: lib.rs
rust/migrations/: 20230722114815_init.down.sql  20230722114815_init.up.sql
rust/sqlite_wrapper/: Cargo.toml
rust/sqlite_wrapper/src/: lib.rs  sqlite_init.rs  sqlite_query_builder.rs
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs
rust/src/api/: simple.rs
rust/src/models/: financial_cards.rs  finantial_cards.rs  identity_cards.rs  logins.rs  mod.rs  notes.rs
rust/structs/: Cargo.toml
rust/structs/src/: lib.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
test/: model_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+207 files in other folders)
