[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.79"
chrono = { version="0.4.33", features = ["serde"] }
flutter_rust_bridge = { version = "=2.0.0-dev.24", features = ["chrono"] }
serde = "1.0.196"
serde_json = "1.0.112"
sqlx = "0.7.3"
tokio = { version = "1.35.1", features = ["rt", "macros"] }

crudlf_core = { version = "0.1.0", path = "./crudlf_core" }
crudlf_derive = { version = "0.1.0", path = "./crudlf_derive" }
sqlite_wrapper = { version = "0.1.0", path = "./sqlite_wrapper" }
structs = { version = "0.1.0", path = "./structs" }
utils = { version = "0.1.0", path = "./utils" }
