[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.80"
chrono = { version="0.4.34", features = ["serde"] }
flutter_rust_bridge = { version = "=2.0.0-dev.28", features = ["chrono"] }
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = {version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"]}
tokio = { version = "1.36.0", features = ["rt", "macros"] }

crudlf_derive = { version = "0.1.0", path = "./crudlf_derive" }
sqlite_wrapper = { version = "0.1.0", path = "./sqlite_wrapper" }
structs = { version = "0.1.0", path = "./structs" }
utils = { version = "0.1.0", path = "./utils" }

[package.metadata.cargo-machete]
ignored = ["utils"]

[profile.dev]
split-debuginfo = "unpacked"
