[package]
name = "crudlf_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# proc-macro-error = "1.0.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.50" , features= ["fold", "extra-traits", "full"]}

[dev-dependencies]
colored-diff = "0.2.3" 

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3
